fix webpage alignment. Center the site

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,10 @@
  *= require_self
  *= require_tree .
  */
+#wrapper {
+	margin: 0 auto;
+	width: 700px;
+}
+
+
+
